# 2022-10-11

./: CMakeLists.txt  README.rst
exercises/: CMakeLists.txt  bag-copy-remove-suite.cpp  bag-copy.h  bag-shared-basic-suite.cpp  bag-shared.h  bag-unique.h  dummy.cpp  thread.cpp
livehacking/: CMakeLists.txt  auto.cpp  const-rvalue-ref.cpp  constexpr-infinite.cpp  enum.cpp  explicit.cpp  initializer-list.cpp  lambda-this.cpp  lambda.cpp  overview.cpp  perfect-forwarding.cpp  rule-of-5.cpp  rvalue-ref.cpp  static-inline.h  structured-binding-vs-tie.cpp  structured-binding.cpp  thread-detach.cpp  thread-race.cpp
livehacking/smart-ptr/: CMakeLists.txt  list-temperatures.cpp  sensors.h  smartptr.h  weak-ptr-demo-thread.cpp
livehacking/threads/: CMakeLists.txt  async.cpp  mtqueue.cpp  promise-future.cpp  thread-local.cpp  x.cpp
